--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="textVariantColor">#888992</color>
     <color name="red">#FF0000</color>
+    <color name="current_layout">#8AF322</color>
 </resources>
