--- a/app/src/main/res/layout/activity_learn_world.xml
+++ b/app/src/main/res/layout/activity_learn_world.xml
@@ -46,6 +46,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvQuestionWord">
 
         <LinearLayout
+            android:id="@+id/layoutAnswer1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="18dp"
@@ -55,6 +56,7 @@
             android:paddingVertical="15dp">
 
             <TextView
+                android:id="@+id/tvVariantNumber1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/shape_rounded_variant"
@@ -68,7 +70,7 @@
                 />
 
             <TextView
-
+                android:id="@+id/tvVariantValue1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -77,6 +79,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layoutAnswer2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="18dp"
@@ -86,6 +89,7 @@
             android:paddingVertical="15dp">
 
             <TextView
+                android:id="@+id/tvVariantNumber2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/shape_rounded_variant"
@@ -99,6 +103,7 @@
                 />
 
             <TextView
+                android:id="@+id/tvVariantValue2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
