--- a/app/src/main/res/layout/activity_learn_world.xml
+++ b/app/src/main/res/layout/activity_learn_world.xml
@@ -175,7 +175,7 @@
 
     </LinearLayout>
 
-    <Button
+    <android.widget.Button
         android:id="@+id/btnSkip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
